# mcm

./: .buildinfo  .gitignore  LICENSE  LICENSE DTM.doc  MANIFEST.in  Python_example.html  README.md  dtm2020.html  first-steps.html  fortran.html  fortran_examples.html  genindex.html  index.html  license.html  meson.build  objects.inv  py-modindex.html  pyproject.toml  python.html  search.html  searchindex.js  setup.py  um.html
.doctrees/: Python_example.doctree  dtm2020.doctree  environment.pickle  first-steps.doctree  fortran.doctree  fortran_examples.doctree  index.doctree  license.doctree  python.doctree  um.doctree
.doctrees/nbsphinx/: Python_example.ipynb
.github/workflows/: pages.yml  traffic.yml
_modules/: index.html  swami.html
_sources/: Python_example.ipynb.txt  fortran.rst.txt  index.rst.txt  license.rst.txt  python.rst.txt  um.rst.txt
data/um/2002/: air-density_monthly-mean.mcm.nc  air-density_standard-deviation.mcm.nc  air-temperature_monthly-mean.mcm.nc  air-temperature_standard-deviation.mcm.nc  x-wind_monthly-mean.mcm.nc  x-wind_standard-deviation.mcm.nc  y-wind_monthly-mean.mcm.nc  y-wind_standard-deviation.mcm.nc
data/um/2004/: air-density_monthly-mean.mcm.nc  air-density_standard-deviation.mcm.nc  air-temperature_monthly-mean.mcm.nc  air-temperature_standard-deviation.mcm.nc  x-wind_monthly-mean.mcm.nc  x-wind_standard-deviation.mcm.nc  y-wind_monthly-mean.mcm.nc  y-wind_standard-deviation.mcm.nc
data/um/2008-2009/: air-density_monthly-mean.mcm.nc  air-density_standard-deviation.mcm.nc  air-temperature_monthly-mean.mcm.nc  air-temperature_standard-deviation.mcm.nc  x-wind_monthly-mean.mcm.nc  x-wind_standard-deviation.mcm.nc  y-wind_monthly-mean.mcm.nc  y-wind_standard-deviation.mcm.nc
docs/: Python_example.ipynb  conf.py  dtm2020.rst  first-steps.rst  fortran.rst  fortran_examples.rst  index.rst  python.rst  requirements.txt
examples/fortran/: altitude_profile.f90  build_examples.sh  compile.sh  map_altitude.f90  p_altitude_profile.py  p_map_altitude.py  point.f90  winds.f90
src/: meson.build
src/dtm2020/: Mod_DTM2020F107Kp_Benchmark.f90  Mod_DTM2020F30Hp60_Benchmark.f90  dtm2020_F107_Kp-subr.f90  dtm2020_F30_Hp-subr.f90
src/libswamif/: dtm2020_F107_Kp-subr_MCM.f90  dtm2020_sigma_function.f90  m_dtm.f90  m_interp.f90  m_mcm.f90  m_um.f90  meson.build
src/swami/: __init__.py  make_wrapper.sh  meson.build  wrapper.f90
traffic/: clones.csv  views.csv
